fix field gap spacing

--- a/dt-assets/scss/_details.scss
+++ b/dt-assets/scss/_details.scss
@@ -669,7 +669,7 @@ select.color-select {
     .section-body {
         display: flex;
         flex-direction: column;
-        gap: 0.5rem;
+        gap: 0.8rem;
     }
 
     &.collapsed {
